fix overflow of the friendlist

--- a/frontend/css/css-var.css
+++ b/frontend/css/css-var.css
@@ -4,7 +4,7 @@
     bg-accent: third row
 */
 :root {
-    --bg-main: #508D69;
-    --bg-main-second: #FF8F8F;
-    --bg-accent: #9ADE7B;
+    --bg-main: #F05941;
+    --bg-main-second: #22092C;
+    --bg-accent: #BE3144;
 }
